Fixed positioning/spacing on New Post
Added my-2 bootstrap class for top/bottom margin on for elements.
Changed position of character counter in text area

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -9,6 +9,14 @@ header .container{
     flex-direction: row;
 }
 
+// 
+form div{
+    position: relative;
+}
+
 form .counter{
     position: absolute;
+    bottom: 10px;
+    right: 10px;
 }
+
